# jssc

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  pom.xml
.github/workflows/: cross-compile.yml  maven-central-release.yml
ant/: build.xml
src/assembly/: one-off-jar.xml  uber-jar.xml
src/cpp/_nix_based/: jssc.cpp
src/cpp/windows/: jssc.cpp
src/java/jssc/: SerialNativeInterface.java  SerialPort.java  SerialPortException.java  SerialPortList.java
src/main/cpp/: jssc_SerialNativeInterface.h
src/main/cpp/_nix_based/: jssc.cpp
src/main/cpp/windows/: jssc.cpp
src/main/java/jssc/: DefaultJniExtractorStub.java  DefaultJniExtractorWrapper.java  SerialNativeInterface.java  SerialPort.java  SerialPortEvent.java  SerialPortException.java  SerialPortList.java  SerialPortStream.java
src/main/resources-precompiled/: README.md
src/main/resources-precompiled/natives/: README.md
src/main/resources-precompiled/natives/osx_64/: libjssc.dylib
src/test/java/jssc/: SerialNativeInterfaceTest.java  SerialPortListTest.java
src/test/java/jssc/bootpath/: ManualBootLibraryPathFailedTest.java  ManualBootLibraryPathTest.java
src/test/java/jssc/common/: ConsoleColor.java  ConsoleStyle.java
src/test/java/jssc/junit/rules/: DisplayMethodNameRule.java
src/test/java/resources/: log4j.properties
src/test/resources/: log4j2.properties
toolchain/: Armhf.cmake  Armsf.cmake  DetectLinux.cmake  Mingw32.cmake  Mingw64.cmake  MingwAarch64.cmake
